--- a/src/app/components/registration/registration.component.css
+++ b/src/app/components/registration/registration.component.css
@@ -1,5 +1,5 @@
 .form-control {
-    width: 70%;
+    width: 85%;
     height: 50px;
     padding: 10px 15px;
     background: no-repeat;
@@ -20,17 +20,8 @@
     background-color: #3b3b3bbb;
 }
 
-.table {
-    margin-top: 30px;
-}
-
 .step-title p {
     color: rgb(194, 191, 191);
-}
-
-.top-btn {
-    width: 50%;
-    margin: 0 auto;
 }
 
 .field-name.ng-invalid.ng-touched ,  .field-email.ng-invalid.ng-touched , 
@@ -42,6 +33,39 @@
     color: #CF6679;
 }   
 
-.gallery{
-    margin-top: 69px;
+.login, .register{
+    margin-top: 99px;
+}
+
+.gallery img{
+    width: 509px;
+}
+
+.loginNavigator {
+    font-size: 19px;
+    color: rgb(226, 224, 224);;
+}
+
+.loginNavigator a{
+    cursor: pointer;
+    text-decoration: underline;
+    color: #a6ebeb;
+}
+
+@media only screen and (max-width: 1100px) {
+    .gallery img {
+      width: 450px;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .gallery img {
+      width: 400px;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .gallery img {
+      width: 350px;
+    }
 }
