--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,28 +3,101 @@
 
         <!-- registation section -->
         <div class="row">
-            <div class="col-md-4">
+
+            <div class="col-md-3" style="overflow: hidden">
+                <div class="list-wrapper" style="overflow-y:scroll;">
+                    <div class="group-div">
+                        <h5> General </h5>
+                        <p> 15 tasks </p>
+                    </div>
+
+                    <div class="group-div">
+                        <h5> Travel </h5>
+                        <p> 3 tasks </p>
+                    </div>
+                </div>
+                <button class="form-control field-submit text-center" style="width: 100%;"> + Create New Group </button>
+            </div>
+
+            <!-- tasks inside some group -->
+            <div class="col-md-5 pl-md-4">
+                <div class="list-wrapper" style="height: 100vh; overflow-y:scroll; float:left;
+                height:calc(100vh - 200px);">
+                    <div class="group-div tasks-div">
+                        <h5 id="title"> Clean my room </h5>
+                        <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
+                            stuff
+                            out of the
+                            room</p>
+                        <div class="modal-footer footer">
+                            <footer>
+                                <span>to do</span><br>
+                                <time>13/ 1/ 2020</time><br>
+                                <a> #clean #laundary #room</a>
+                            </footer>
+                        </div>
+                    </div>
+                    <div class="group-div tasks-div">
+                        <h5 id="title"> Clean my room </h5>
+                        <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
+                            stuff
+                            out of the
+                            room</p>
+                        <div class="modal-footer footer">
+                            <footer>
+                                <span>to do</span><br>
+                                <time>13/ 1/ 2020</time><br>
+                                <a> #clean #laundary #room</a>
+                            </footer>
+                        </div>
+                    </div>
+                    <div class="group-div tasks-div">
+                        <h5 id="title"> Clean my room </h5>
+                        <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
+                            stuff
+                            out of the
+                            room</p>
+                        <div class="modal-footer footer">
+                            <footer>
+                                <span>to do</span><br>
+                                <time>13/ 1/ 2020</time><br>
+                                <a> #clean #laundary #room</a>
+                            </footer>
+                        </div>
+                    </div>
+                </div>
+                <button class="form-control field-submit text-center" style="width: 100%;"> + Add New Task </button>
+
+            </div>
+
+            <div class="col-md-4 pl-md-4">
                 <div class="group-div">
-                    <h5> General </h5>
+                    <h5> January </h5>
                     <p> 15 tasks </p>
                 </div>
-                
-                <button class="form-control field-submit text-center"> + Create New Group </button>
-            </div>
-
-            <!-- register image -->
-            <div class="content-images col-md-4 pl-md-5 ">
-                <div class="gallery register">
-                    <div class="mask-radius"> groups details : default general</div>
-                </div>
-            </div>
-
-            <div class="content-images col-md-4 pl-md-5 ">
-                <div class="gallery register">
-                    <div class="mask-radius"> grouping by the month</div>
+                <div class="group-div tasks-div">
+                    <h5 id="title"> Clean my room </h5>
+                    <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
+                        stuff
+                        out of the
+                        room</p>
+                    <div class="modal-footer footer">
+                        <footer>
+                            <span>to do</span><br>
+                            <time>13/ 1/ 2020</time><br>
+                            <a> #clean #laundary #room</a>
+                        </footer>
+                    </div>
                 </div>
             </div>
 
         </div>
+
+        <!-- <div class="row">
+            <div class="col-md-3">
+                <button class="form-control field-submit text-center" style="width: 100%;"> + Create New Group </button>
+            </div>
+        </div> -->
+
     </div>
 </div>
