--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,56 +1,30 @@
 <div style="background-color: #111111; padding: 50px 0;" class="text-light">
     <div class="container">
 
-        <!-- registation section -->
+        <!-- home section -->
         <div class="row">
-
-            <div class="col-md-3" style="overflow: hidden">
-                <div class="list-wrapper" style="overflow-y:scroll;">
+            <!-- groups  -->
+            <div class="col-md-3 list-wrapper">
+                <div class="scrollar">
                     <div class="group-div">
                         <h5> General </h5>
-                        <p> 15 tasks </p>
-                    </div>
-
-                    <div class="group-div">
-                        <h5> Travel </h5>
                         <p> 3 tasks </p>
                     </div>
+                    <div class="group-div">
+                        <div class="d-flex flex-column ">
+                            <h5>Travel</h5>
+                            <img class="align-self-end" src={{edit}} width="27"/>
+                        </div>
+                        <p> 15 tasks </p>
+                    </div>
+                    
                 </div>
                 <button class="form-control field-submit text-center" style="width: 100%;"> + Create New Group </button>
             </div>
 
             <!-- tasks inside some group -->
-            <div class="col-md-5 pl-md-4">
-                <div class="list-wrapper" style="height: 100vh; overflow-y:scroll; float:left;
-                height:calc(100vh - 200px);">
-                    <div class="group-div tasks-div">
-                        <h5 id="title"> Clean my room </h5>
-                        <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
-                            stuff
-                            out of the
-                            room</p>
-                        <div class="modal-footer footer">
-                            <footer>
-                                <span>to do</span><br>
-                                <time>13/ 1/ 2020</time><br>
-                                <a> #clean #laundary #room</a>
-                            </footer>
-                        </div>
-                    </div>
-                    <div class="group-div tasks-div">
-                        <h5 id="title"> Clean my room </h5>
-                        <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
-                            stuff
-                            out of the
-                            room</p>
-                        <div class="modal-footer footer">
-                            <footer>
-                                <span>to do</span><br>
-                                <time>13/ 1/ 2020</time><br>
-                                <a> #clean #laundary #room</a>
-                            </footer>
-                        </div>
-                    </div>
+            <div class="col-md-5 pl-md-4 list-wrapper">
+                <div class="scrollar">
                     <div class="group-div tasks-div">
                         <h5 id="title"> Clean my room </h5>
                         <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
@@ -67,37 +41,35 @@
                     </div>
                 </div>
                 <button class="form-control field-submit text-center" style="width: 100%;"> + Add New Task </button>
-
             </div>
 
-            <div class="col-md-4 pl-md-4">
-                <div class="group-div">
-                    <h5> January </h5>
-                    <p> 15 tasks </p>
+            <div class="col-md-4 pl-md-4 list-wrapper">
+                <div>
+                    choose Month
                 </div>
-                <div class="group-div tasks-div">
-                    <h5 id="title"> Clean my room </h5>
-                    <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
-                        stuff
-                        out of the
-                        room</p>
-                    <div class="modal-footer footer">
-                        <footer>
-                            <span>to do</span><br>
-                            <time>13/ 1/ 2020</time><br>
-                            <a> #clean #laundary #room</a>
-                        </footer>
+                <div class="scrollar">
+                    <div class="group-div">
+                        <h5> Last Month </h5>
+                        <p> 15 tasks </p>
+                    </div>
+                    <div class="group-div tasks-div">
+                        <h5 id="title"> Clean my room </h5>
+                        <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
+                            stuff
+                            out of the
+                            room</p>
+                        <div class="modal-footer footer">
+                            <footer>
+                                <span>to do</span><br>
+                                <time>13/ 1/ 2020</time><br>
+                                <a> #clean #laundary #room</a>
+                            </footer>
+                        </div>
                     </div>
                 </div>
             </div>
 
         </div>
-
-        <!-- <div class="row">
-            <div class="col-md-3">
-                <button class="form-control field-submit text-center" style="width: 100%;"> + Create New Group </button>
-            </div>
-        </div> -->
 
     </div>
 </div>
