Creat auth receptor

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -47,6 +47,57 @@
                             </footer>
                         </div>
                     </div>
+                    <div class="group-div tasks-div">
+                        <div class="d-flex flex-row justify-content-between flex-start">
+                            <h5 id="title"> Clean my room </h5>
+                            <img class="align-self-end edit-img" src={{edit}} width="25" alt="edit" />
+                        </div>
+                        <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
+                            stuff
+                            out of the
+                            room</p>
+                        <div class="modal-footer footer">
+                            <footer>
+                                <span>to do</span><br>
+                                <time>13/ 1/ 2020</time><br>
+                                <a> #clean #laundary #room</a>
+                            </footer>
+                        </div>
+                    </div>
+                    <div class="group-div tasks-div">
+                        <div class="d-flex flex-row justify-content-between flex-start">
+                            <h5 id="title"> Clean my room </h5>
+                            <img class="align-self-end edit-img" src={{edit}} width="25" alt="edit" />
+                        </div>
+                        <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
+                            stuff
+                            out of the
+                            room</p>
+                        <div class="modal-footer footer">
+                            <footer>
+                                <span>to do</span><br>
+                                <time>13/ 1/ 2020</time><br>
+                                <a> #clean #laundary #room</a>
+                            </footer>
+                        </div>
+                    </div>
+                    <div class="group-div tasks-div">
+                        <div class="d-flex flex-row justify-content-between flex-start">
+                            <h5 id="title"> Clean my room </h5>
+                            <img class="align-self-end edit-img" src={{edit}} width="25" alt="edit" />
+                        </div>
+                        <p id="body"> do my laundary then make my be then clean the whole room and move all the dirty
+                            stuff
+                            out of the
+                            room</p>
+                        <div class="modal-footer footer">
+                            <footer>
+                                <span>to do</span><br>
+                                <time>13/ 1/ 2020</time><br>
+                                <a> #clean #laundary #room</a>
+                            </footer>
+                        </div>
+                    </div>
                 </div>
                 <button class="form-control field-submit text-center" style="width: 100%;"> + Add New Task </button>
             </div>
