--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -10,6 +10,9 @@
                             <h2 class="featured">Join ToDos</h2>
                             <p>Create your account</p>
                         </div>
+                        <div class="Error" *ngIf="error">
+                            {{error}}
+                        </div>
                     </div>
                 </div>
                 <!-- registration form -->
